Fixed scanning for gameboard and swapping; Dealing with timings of after swap and remove gems, adding new gems and moving gems

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bejeweled</title>
-  <link rel="stylesheet" href="css/bejeweled.css" media="all">
+  <link rel="stylesheet" href="stylesheets/bejeweled.css" media="all">
 </head>
 <body>
 	<header class="main_header">
